--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
             </div>
         </template>
         <div id="toolbar">
-            <div id="current-folder">
-                <script>
-                    document.write(getUserHomeFolder());
-                </script>
-            </div>
+            <div id="current-folder"></div>
         </div>
         <div id="main-area"></div>
     </body>
