--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     </template>
     <div id="toolbar">
       <div id="home">HOME</div>
+      <div id="open">Open...</div>
       <div id="current-folder"></div>
       <input type="search" id="search" results="5" placeholder="Search"></input>
+      <input type="button" id="startBtn" value="Start"></input>
     </div>
     <div id="main-area"></div>
   </body>
