--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
       </div>
     </template>
     <div id="toolbar">
+      <div id="fullscreen">Fullscreen</div>
       <div id="home">HOME</div>
-      <div id="open">Open...</div>
+      <div id="current">Current</div>
       <div id="current-folder"></div>
       <input type="search" id="search" results="5" placeholder="Search"></input>
       <input type="button" id="startBtn" value="Start"></input>
     </div>
     <div id="main-area"></div>
+    <h1 id="title"></h1>
+    <div id="contents"></div>
   </body>
 </html>
