--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       </div>
     </template>
     <div id="toolbar">
-      <div id="fullscreen">Fullscreen</div>
-      <div id="home">HOME</div>
+      <div id="fullscreen">FullScreen</div>
+      <div id="home">H</div>
+      <div id="open">O</div>
       <div id="current">Current</div>
       <div id="current-folder"></div>
       <input type="search" id="search" results="5" placeholder="Search"></input>
