--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div id="home">H</div>
       <div id="open">O</div>
       <div id="current">Current</div>
+      <div id="logs">Logs</div>
       <div id="current-folder"></div>
       <input type="search" id="search" results="5" placeholder="Search"></input>
       <input type="button" id="startBtn" value="Start"></input>
