home 제거 - open 을 file 로 변경 - sample 버튼 추가

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </template>
     <div id="toolbar">
       <div id="fullscreen">FullScreen</div>
-      <div id="home">H</div>
-      <div id="open">O</div>
+      <div id="file">File</div>
       <div id="current">Current</div>
       <div id="logs">Logs</div>
+      <div id="sample">Sample</div>
       <div id="current-folder"></div>
       <input type="search" id="search" results="5" placeholder="Search"></input>
       <input type="button" id="startBtn" value="Start"></input>
