validator 구현중 - ref 검증 로직 추가 - 검증 결과 처리 중

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <input type="button" id="startBtn" value="Start"></input>
     </div>
     <div id="main-area"></div>
+    <div id="needCheckFiles"></div>
     <h1 id="title"></h1>
     <div id="contents"></div>
   </body>
