validator 구현중 - ref 검증 수정 - 검증 결과 시각적으로 표시하도록 수정

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <input type="button" id="startBtn" value="Start"></input>
     </div>
     <div id="main-area"></div>
+    <h1 id="needCheckFilesLabel">확인 필요</h1>
     <div id="needCheckFiles"></div>
     <h1 id="title"></h1>
     <div id="contents"></div>
