디버깅 내용 출력되도록 수정

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div id="main-area"></div>
     <h1 id="needCheckFilesLabel">확인 필요</h1>
     <div id="needCheckFiles"></div>
+    <h2 id="debugMessageLabel">디버깅 내용</h2>
+    <div id="debugMessages"></div>
     <h1 id="title"></h1>
     <div id="contents"></div>
   </body>
